FB-12 | Service | Implement feature and test for find uom in rest api and refactor openapi specs
