# farm-byte-service/catalog/catalog-adapter/catalog-adapter-rest-api/src/main/java/cm/xenonbyte/farmbyte/catalog/adapter/rest/api/uom/UomServiceRestApiAdapter.java
@@ -2,7 +2,13 @@ package cm.xenonbyte.farmbyte.catalog.adapter.rest.api.uom;
 
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.uom.view.CreateUomViewRequest;
 import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.uom.view.CreateUomViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.uom.view.FindUomByIdViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.uom.view.FindUomsPageInfoViewResponse;
+import cm.xenonbyte.farmbyte.catalog.adapter.rest.api.generated.uom.view.SearchUomsPageInfoViewResponse;
 import jakarta.annotation.Nonnull;
+import jakarta.validation.Valid;
+
+import java.util.UUID;
 
 /**
  * @author bamk
@@ -10,5 +16,12 @@ import jakarta.annotation.Nonnull;
  * @since 08/08/2024
  */
 public interface UomServiceRestApiAdapter {
-    @Nonnull CreateUomViewResponse createUom(@Nonnull CreateUomViewRequest request);
+    @Nonnull @Valid CreateUomViewResponse createUom(@Nonnull CreateUomViewRequest request);
+
+    @Nonnull @Valid  FindUomByIdViewResponse findUomById(@Nonnull UUID uomId);
+
+    @Nonnull @Valid FindUomsPageInfoViewResponse findUoms(int page, int size, String attribute, String direction);
+
+    @Nonnull @Valid
+    SearchUomsPageInfoViewResponse searchUoms(int page, int size, String attribute, String direction, String keyword);
 }
